2011-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: Implement more efficient equality tests for
	utf-8 literal strings and strings in internal representation.
	Implement rangeOfComposedCharacterSequenceAtIndex: for utf8 literal
	strings.

2011-10-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSeq.h: Replace unsigned with NSUInteger.

2011-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix bug when widening mutable string in
        replaceOccurrencesOfString:...range:
	* Source/GSString.m: more efficient check to see if a literal string
	can be converted to ascii or latin1.  Remove unnecessary constraint
	on when we need to widen strings.

2011-10-28  Fred Kiefer <FredKiefer@gmx.de>

	* Tests/base/NSMutableString/basic.m: Add test for
	replaceOccurrencesOfString:...range:

2011-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Do not redefine GNUSTEP_CONFIG_FILE in case it confuses
	gnustep-config.  Add check that gnustep-config returns something when
	asked for the objc libraries.
	* configure: Regenerate
	* base.make.in: Add flag to tell compiler to use UTF-8 for literal
	string constants.

2011-10-25  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: fix erroneous define of HAVE_GNUTLS to zero, and add
	check for building with a  different compiler from that used by make.

2011-10-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAffineTransform.m (-initWithCoder:, encodeWithCoder:):
	Don't do anything for the keyed coding case.
	* Source/NSDictionary.m (-initWithCoder:): Add another keyed
	coding case.

2011-10-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSProcessInfo.m: Add includes needed for the HAVE_PROCFS
	case.
	* Source/common.h: Correct last commit, the #endif was placed
	incorrectly.

2011-10-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/common.h: Attempt to workaround clang __block problem

2011-10-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: